# AstroSyncRPC

./: .gitignore  LICENSE  README.md  pyproject.toml
astrosync_rpc/: __main__.py  auth_client.py  main.py  naku_enums.py  radio_api.py  rotator_api.py  rpc_client.py  sx127x_registers_and_params.py  websocket_client.py
