[tool.poetry]
name = "astrosync_rpc"
version = "0.1.0"
description = ""
authors = ["crinitusfeles <crinitusfeles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.4.2"
requests-oauth2client = "^1.1.0"
websocket-client = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
